--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   },
   "devDependencies": {
     "coffeelint": "^1.5.2",
+    "expect.js": "^0.3.1",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-coffeelint": "0.0.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-simple-mocha": "^0.4.0",
     "mocha": "*",
     "moment": "^2.8.0"
   },
