--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ node_js:
   - '0.10'
 before_install:
   - currentfolder=${PWD##*/}
-  - if [ "$currentfolder" != 'generator-grunt-plugin' ]; then cd .. && eval "mv $currentfolder generator-grunt-plugin" && cd generator-grunt-plugin; fi
+  - if [ "$currentfolder" != 'generator-rym' ]; then cd .. && eval "mv $currentfolder generator-rym" && cd generator-rym; fi
 
